[package]
name = "davinci-js"
version = "0.1.0"
edition = "2024"
description = "A unified programming paradigm for verifiable, AI-assisted software development"
repository = "https://github.com/wizzardx/davinci-js"
license = "MIT OR Apache-2.0"
keywords = ["verification", "formal-methods", "code-generation", "ai-assisted"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Formal verification foundations
z3 = { version = "0.12", optional = true }
# Type system
im = "15.1"  # Immutable data structures
# For the AI components
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = ["cli"]
cli = []
verification-engine = ["z3"]
ai-assistance = ["tokio", "reqwest"]
